Start README and fix username alignment with picture

--- a/app/assets/stylesheets/api/follows.scss
+++ b/app/assets/stylesheets/api/follows.scss
@@ -19,6 +19,7 @@
 
 .feed-user-pic {
   display: flex;
+  align-items: center;
 }
 
 .picture-holder-feed {
